# windows_registry_search

./: Cargo.toml  README.md
src/: controls.rs  lib.rs  main.rs  renderer.rs  root.rs  search_editor.rs  search_term_tracker.rs  static_selection.rs  worker_manager.rs  worker_runtime.rs
