[package]
name = "registry_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.51.0"
parking_lot = "0.12.1"
tokio = { version = "1.32.0", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
num_cpus = "1.16.0"