[package]
name = "registry_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.52.0"
parking_lot = "0.12.1"
tokio = { version = "1.32.0", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
num_cpus = "1.16.0"
clap = "4.4.8"
tui = "0.19.0"
crossterm = "0.27.0"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"
directories = "5.0.1"
strum = { version = "0.25", features = ["derive"] }